--- a/CssPractice2.html
+++ b/CssPractice2.html
@@ -14,9 +14,9 @@
         <p>Mental health is a state of mental well-being that enables people to cope with the stresses of life, realize their abilities, learn well and work well, and contribute to their community. It is an integral component of health and well-being that underpins our individual and collective abilities to make decisions, build relationships and shape the world we live in. Mental health is a basic human right. And it is crucial to personal, community and socio-economic development.</p>
       </div>
         <div  class="second-paragraph>
-      <p>  Mental health conditions include mental disorders and psychosocial disabilities as well as other mental states associated with significant distress, impairment in functioning, or risk of self-harm. People with mental health conditions are more likely to experience lower levels of mental well-being, but this is not always or necessarily the case.</p> 
-        </div>
-      <a href="https://www.who.int/news-room/fact-sheets/detail/mental-health-strengthening-our-response">Visit for more info</a>
+       Mental health conditions include mental disorders and psychosocial disabilities as well as other mental states associated with significant distress, impairment in functioning, or risk of self-harm. People with mental health conditions are more likely to experience lower levels of mental well-being, but this is not always or necessarily the case. 
+        </div> 
+      <a href="https://www.who.int/news-room/fact-sheets/detail/mental-health-strengthening-our-response" >Visit for more info</a>
         <h3>Key facts</h3>
         <ol>
             <li>Affordable, effective and feasible strategies exist to promote, protect and restore mental health. </li>
